--- a/package.json
+++ b/package.json
@@ -26,9 +26,14 @@
     "@types/cors": "^2.8.4",
     "@types/es6-shim": "^0.31.37",
     "@types/express": "^4.11.1",
+    "@types/mongodb": "^3.0.19",
+    "@types/uuid": "^3.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "js-sha3": "^0.7.0",
+    "mongodb": "^3.0.10",
     "path": "^0.12.7",
-    "typescript": "^2.8.3"
+    "typescript": "^2.8.3",
+    "uuid": "^3.2.1"
   }
 }
